--- a/app/views/basics/index.html.erb
+++ b/app/views/basics/index.html.erb
@@ -14,7 +14,7 @@
   
   <div class='select-reason-contents'>
     <h2 class='title'>
-      Petちゃんの特徴とできること
+      アプリ”Petちゃん”の特徴とできること
     </h2>
     <ul class='reason-lists'>
       <li class='list'>
